--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.10"
 pillow = "^11.1.0"
 djangorestframework = "^3.15.2"
+djangorestframework-simplejwt = "^5.5.0"
 
 
 [build-system]
