--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ psycopg2-binary = "^2.9.10"
 pillow = "^11.1.0"
 djangorestframework = "^3.15.2"
 djangorestframework-simplejwt = "^5.5.0"
+nullable = "^0.2.0"
 
 
 [build-system]
