--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pillow = "^11.1.0"
 djangorestframework = "^3.15.2"
 djangorestframework-simplejwt = "^5.5.0"
 nullable = "^0.2.0"
+stripe = "^11.6.0"
 
 
 [build-system]
