--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ djangorestframework = "^3.15.2"
 djangorestframework-simplejwt = "^5.5.0"
 nullable = "^0.2.0"
 stripe = "^11.6.0"
+django-filter = "^25.1"
 
 
 [build-system]
